[b]Version 0.6.0rc3[/b] (not released yet):

(2008-03-20)
 * Fix: selection of chapters should work again with newer versions of mplayer.

(2008-03-17)
 * Added new menu Video->Rotate, with options to rotate the image.
 * Show the language -if available- along with the name in the audio menu
   (it may work too in the title menu).

(2008-03-14)
 * Now a dialog appears too if mplayer fails to start or crashes.
 * Add the scale filter if using the soft equalizer and gl/gl2, to avoid
   mplayer to complain.
 * The subtitle actions are enabled now if the close caption option is checked.

(2008-03-13)
 * Added a new dialog to report the mplayer errors.

(2008-03-11)
 * Displays a warning dialog if mplayer exits with an exit code 
   different to 0. 

(2008-03-10)
 * (Internal change) Use -monitorpixelaspect instead of -monitoraspect.

(2008-03-08)
 * Use -colorkey for directx only.

(2008-03-06)
 * Added more help for the subtitle, interface and advanced sections in 
   preferences.

(2008-03-05)
 * Ignore action restore/hide if system tray icon is not visible. Fixes
   bug #1908229.
 * Added option in config.h to disable the use of the colorkey.

(2008-03-03)
 * Now the shortcut editor should recognize some of the multimedia keys.
 * (By user request) Added an action to reset the video equalizer.
 * Remove starting and ending whitespaces in mp3 tags. Patch by 
   Tanguy Krotoff <tkrotoff@gmail.com>

(2008-03-02)
 * Bugfix: the keys PgDown and PgUp were incorrectly identified as PageDown
   and PageUp by shortcutgetter.

(2008-03-01)
 * Try to keep fullscreen mode if running mplayer in its own window when
   opening a new file.
 * Added flac to the list of audio extensions. Patch by 
   Tanguy Krotoff <tkrotoff@gmail.com>
 * Now changing the application stylesheet can be disabled setting
   ALLOW_CHANGE_STYLESHEET to 0 in config.h

(2008-02-29)
 * Added the Macedonian translation by Marko Doda <mark0d0da@gmail.com>